--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.4",
     "@mui/material-nextjs": "^5.15.3",
+    "cookies-next": "^4.1.1",
     "next": "^14.1.0",
     "react": "^18",
     "react-dom": "^18",
