--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.15.4",
     "@mui/material-nextjs": "^5.15.3",
     "cookies-next": "^4.1.1",
+    "mui-one-time-password-input": "^2.0.2",
     "next": "^14.1.0",
     "react": "^18",
     "react-dom": "^18",
